<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_receipt_detail"
    android:orientation="vertical"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="86dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    app:cardUseCompatPadding="true" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@id/text_receipt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:text="@string/text_receipt_date"
            android:textColor="#ccc"
            android:textSize="15sp" />
        <TextView
            android:id="@id/text_receipt_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_receipt_date"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_receipt_store"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/text_receipt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_receipt_store"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/text_receipt_amount"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
