<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- toolbar! -->
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_receipt"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/ToolbarTheme"/>

    <!-- google maps fragment -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp" />

    <!-- persistent bottom sheet -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottomsheet_receipt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        app:behavior_peekHeight="150dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_receipt_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/text_receipt_store"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_receipt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@id/text_receipt_store"
                android:text="@string/text_receipt_date"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_receipt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/text_receipt_date"
                android:layout_marginEnd="30dp"
                android:text="@string/text_receipt_amount"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>